--- a/学习/2.2/waterFall.html
+++ b/学习/2.2/waterFall.html
@@ -14,7 +14,7 @@
       .box{
         position: absolute;
         width: 200px;
-        float: left;
+        /*float: left;*/
         margin-top: 10px;
         margin-left: 10px;
         transition: all 1s;
@@ -94,18 +94,6 @@
         $(window).on('resize',function(){
           render();
         })
-
-
-
-
-
-
-
-
-
-
-
-
       })
     </script>
   </body>
