--- a/学习/12.17/任务18.html
+++ b/学习/12.17/任务18.html
@@ -5,187 +5,187 @@
   </head>
   <body>
     <script>
-    //   var prod = {
-    //       name: '女装',
-    //       styles: ['短款', '冬季', '春装']
-    //     };
-    //     console.log('13')
-    //   function getTpl(data){
-    //     var h1='<dl class="product">';
-    //     h1+= '\n\t<dt>'+prod.name+'</dt>';
-    //     for( var i=0; i<prod.styles.length; i++){
-    //       h1+='\n\t<dd>'+ prod.styles[i] +'</dd>';
-    //
-    //     }
-    //     h1+='\n</dl>'
-    //   return h1;
-    // };
-    // console.log(getTpl())
+      var prod = {
+          name: '女装',
+          styles: ['短款', '冬季', '春装']
+        };
+        console.log('13')
+      function getTpl(data){
+        var h1='<dl class="product">';
+        h1+= '\n\t<dt>'+prod.name+'</dt>';
+        for( var i=0; i<prod.styles.length; i++){
+          h1+='\n\t<dd>'+ prod.styles[i] +'</dd>';
 
-    // function find(arr,tar){
-    //   for(var i=0; i<arr.length; i++){
-    //     if(arr[i]===tar){
-    //       return i;
-    //     }
-    //   }
-    //   return -1;
-    // }
-    // arr = ["a", "b", 1, 3, 5, "b", 2];
-    // function filterNumeric(arr){
-    //   var newarr=[];
-    //   for(var i=0; i<arr.length; i++){
-    //     if(typeof arr[i] === "number"){
-    //       newarr.push(arr[i])
-    //       }
-    //     }
-    //     return newarr;
-    // }
-    // newarr=filterNumeric(arr);
-//
-//     var obj = {
-//       className: 'open menu '
-//     }
-//     obj.className.split(" ");
-//
-//     function addclass(obj,st){
-//       var st="new";
-//
-//     }
-// addclass();
-// camelize("background-color")
-// camelize("list-style-image")
-// function camelize(str){
-//   var aaa=str.split('-');
-//   for(i=0;i<aaa.length;i++){
-//     aaa[i]=aaa[i].charAt(0).toUpperCase()+aaa[i].slice(1);
-//   }
-//   return aaa.join('');
-// }
-// function isPalindrome(data){
-//   var string=data.split('').reverse();
-//   var aa=data.split('').join(' ')
-//   var bb=string.join(' ')
-//   if(aa===bb){
-//     console.log('ture')
-//   }else
-//   {
-//   console.log('false')
-//   }
-// }
-// isPalindrome('abccba')
+        }
+        h1+='\n</dl>'
+      return h1;
+    };
+    console.log(getTpl())
+
+    function find(arr,tar){
+      for(var i=0; i<arr.length; i++){
+        if(arr[i]===tar){
+          return i;
+        }
+      }
+      return -1;
+    }
+    arr = ["a", "b", 1, 3, 5, "b", 2];
+    function filterNumeric(arr){
+      var newarr=[];
+      for(var i=0; i<arr.length; i++){
+        if(typeof arr[i] === "number"){
+          newarr.push(arr[i])
+          }
+        }
+        return newarr;
+    }
+    newarr=filterNumeric(arr);
+
+    var obj = {
+      className: 'open menu '
+    }
+    obj.className.split(" ");
+
+    function addclass(obj,st){
+      var st="new";
+
+    }
+addclass();
+camelize("background-color")
+camelize("list-style-image")
+function camelize(str){
+  var aaa=str.split('-');
+  for(i=0;i<aaa.length;i++){
+    aaa[i]=aaa[i].charAt(0).toUpperCase()+aaa[i].slice(1);
+  }
+  return aaa.join('');
+}
+function isPalindrome(data){
+  var string=data.split('').reverse();
+  var aa=data.split('').join(' ')
+  var bb=string.join(' ')
+  if(aa===bb){
+    console.log('ture')
+  }else
+  {
+  console.log('false')
+  }
+}
+isPalindrome('abccba')
 
 
-// function isPalindrome(data){
-//   var array=data.split('');
-//   console.log(array)
-//   for(var i=1; i<array.length; i++){
-//     if(array[i-1]!==array[array.length-i]){
-//       console.log('false') ;
-//       break;
-//     }
-//     console.log('true') ;
-//       break;
-//   }
-// }
-// isPalindrome('abcdfgsgasfrtjycba');
-// var john = { name: "John Smith", age: 23 }
-// var mary = { name: "Mary Key", age: 18 }
-// var bob = { name: "Bob-small", age: 6 }
-// var people = [ john, mary, bob ]
-// console.log(john.age)
-// function agesort(data){
-//
-// }
-// ageSort(people) // [ bob, mary, john ]
-// var john = { name: "John Smith", age: 23 };
-// var mary = { name: "Mary Key", age: 18 };
-// var bob = { name: "Bob-small", age: 6 };
-// var people = [ john, mary, bob ];
-// function ageSort(data){
-//   data.sort(function(a, b){
-//     if(a.age<b.age){
-//       return -1;
-//     }
-//     if(a.age>b.age){
-//       return 1;
-//     }
-//     return 0;
-//   }
-// )};
-// ageSort(people);
-// console.log(people);
-// var ucFirst;
-// function ucFirst(data){
-//   return data.charAt(0).toUpperCase()+data.slice(1);
-// }
-// console.log(ucFirst('hunger'));
-// function truncate(str,maxlength){
-//     if(str.length>maxlength){
-//       return str.substr(0,maxlength)+'...';
-//     }
-//     return str;
-//   }
-// truncate('dfgdsdfgsdgs','5');
-// console.log(truncate('dfgdsdfgsdgs','5'));
-// function array(min, max){
-//   return Math.random() * (max - min) + min;
-// }
-// console.log(array(3,11));
-// function array(min,max){
-//   return Math.floor(Math.random()*(max - min) + min);
-// }
-// console.log(array(1,4));
+function isPalindrome(data){
+  var array=data.split('');
+  console.log(array)
+  for(var i=1; i<array.length; i++){
+    if(array[i-1]!==array[array.length-i]){
+      console.log('false') ;
+      break;
+    }
+    console.log('true') ;
+      break;
+  }
+}
+isPalindrome('abcdfgsgasfrtjycba');
+var john = { name: "John Smith", age: 23 }
+var mary = { name: "Mary Key", age: 18 }
+var bob = { name: "Bob-small", age: 6 }
+var people = [ john, mary, bob ]
+console.log(john.age)
+function agesort(data){
 
-// function array(min,max){
-//   return Math.floor(Math.random()*(max - min + 1) + min);
-// }
-// console.log(array(1,4))
+}
+ageSort(people) // [ bob, mary, john ]
+var john = { name: "John Smith", age: 23 };
+var mary = { name: "Mary Key", age: 18 };
+var bob = { name: "Bob-small", age: 6 };
+var people = [ john, mary, bob ];
+function ageSort(data){
+  data.sort(function(a, b){
+    if(a.age<b.age){
+      return -1;
+    }
+    if(a.age>b.age){
+      return 1;
+    }
+    return 0;
+  }
+)};
+ageSort(people);
+console.log(people);
+var ucFirst;
+function ucFirst(data){
+  return data.charAt(0).toUpperCase()+data.slice(1);
+}
+console.log(ucFirst('hunger'));
+function truncate(str,maxlength){
+    if(str.length>maxlength){
+      return str.substr(0,maxlength)+'...';
+    }
+    return str;
+  }
+truncate('dfgdsdfgsdgs','5');
+console.log(truncate('dfgdsdfgsdgs','5'));
+function array(min, max){
+  return Math.random() * (max - min) + min;
+}
+console.log(array(3,11));
+function array(min,max){
+  return Math.floor(Math.random()*(max - min) + min);
+}
+console.log(array(1,4));
 
-// function array(min,max,length){
-//   var array1=(Math.floor(Math.random()*(max-min+1)+min))
-//   if(array1.length <= length){
-//     array1.push(Math.floor(Math.random()*(max-min+1)+min))
-//   }
-//   return (array1)
-// }
-// console.log(array(1,4,5))
-// ?????????
+function array(min,max){
+  return Math.floor(Math.random()*(max - min + 1) + min);
+}
+console.log(array(1,4))
 
-// function array(min,max,length){
-//   var arr=[];
-//   for(i=0; i<length; i++){
-//     arr.push(Math.floor(Math.random()*(max-min+1)+min))
-//   }
-//   return (arr)
-// }
-// console.log(array(1,4,5))
+function array(min,max,length){
+  var array1=(Math.floor(Math.random()*(max-min+1)+min))
+  if(array1.length <= length){
+    array1.push(Math.floor(Math.random()*(max-min+1)+min))
+  }
+  return (array1)
+}
+console.log(array(1,4,5))
+?????????
 
-// function getRandStr(n){
-//   var str="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
-//   var result="";
-//   for(i=0;i<n;i++){
-//     result+=str[Math.floor(Math.random()*str.length)]
-//   }
-//   return result;
-// }
-// var str = getRandStr(10); // 0a3iJiRZap
-// console.log(str)
-// var obj = {
-//   className: 'open menu'
-// }
-// var array=obj.className.split(' ');
-// function addClass(obj,data){
-//   if(array.indexOf(data)===-1){
-//     obj.className+=" "+data;
-//   }
-// }
-// function removeClass(obj,data){
-//   if(array.indexOf(data)!==-1){
-//     boj.className=obj.className.replace(data,"");
-//   }
-//   // array.splice(array.indexOf(data),1);
-// }
-//   removeClass(obj,'sdfsdfsdf')
+function array(min,max,length){
+  var arr=[];
+  for(i=0; i<length; i++){
+    arr.push(Math.floor(Math.random()*(max-min+1)+min))
+  }
+  return (arr)
+}
+console.log(array(1,4,5))
+
+function getRandStr(n){
+  var str="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
+  var result="";
+  for(i=0;i<n;i++){
+    result+=str[Math.floor(Math.random()*str.length)]
+  }
+  return result;
+}
+var str = getRandStr(10); // 0a3iJiRZap
+console.log(str)
+var obj = {
+  className: 'open menu'
+}
+var array=obj.className.split(' ');
+function addClass(obj,data){
+  if(array.indexOf(data)===-1){
+    obj.className+=" "+data;
+  }
+}
+function removeClass(obj,data){
+  if(array.indexOf(data)!==-1){
+    boj.className=obj.className.replace(data,"");
+  }
+  // array.splice(array.indexOf(data),1);
+}
+  removeClass(obj,'sdfsdfsdf')
 
 function isNumeric (el){
     return typeof el === 'number';
