--- a/学习/12.20/任务.html
+++ b/学习/12.20/任务.html
@@ -6,113 +6,113 @@
   </head>
   <body>
     <script>
-    // 问答：
-    // var obj1 = {a:1, b:2};
-    // var obj2 = {a:1, b:2};
-    // console.log(obj1 == obj2);
-    // console.log(obj1 = obj2);
-    // console.log(obj1 == obj2);
+    问答：
+    var obj1 = {a:1, b:2};
+    var obj2 = {a:1, b:2};
+    console.log(obj1 == obj2);
+    console.log(obj1 = obj2);
+    console.log(obj1 == obj2);
 
 
-    // 代码一：
-    // function getIntv(date){
-    //   var datetime= Date.parse(date)-Date.now()
-    //   var day=Math.floor(datetime/1000/60/60/24);
-    //   var hours= Math.floor((datetime-day*1000*60*60*24)/1000/60/60);
-    //   var minutes=Math.floor((datetime-day*1000*60*60*24-hours*1000*60*60)/1000/60);
-    //   var second=Math.floor((datetime-day*1000*60*60*24-hours*1000*60*60-minutes*1000*60)/1000);
-    //   return '距除夕还有' + day + '天' + hours + '小时' + minutes + '分' + second + '秒';
-    // }
-    // var str = getIntv("2017-01-27");
-    // console.log(str);
-    // //
-
-    // 代码二：
-  //   function getChsDate(data){
-  //     var array=data.split('-');
-  //     var year='';
-  //     var hanzi=['零','一','二','三','四','五','六','七','八','九'];
-  //     for(var i=0; i<4; i++){
-  //       year+=hanzi[array[0][i]];
-  //     }
-  //   function m_d(data){
-  //     if (data.length===1){
-  //       data="0"+data;
-  //     }
-  //     if(data[0]==="0"){
-  //       return hanzi[data[1]];
-  //     }
-  //     if(data[0]==="1"){
-  //       return "十"+hanzi[data[1]];
-  //     }
-  //     if(data[0]==="2"){
-  //       return "二十"+hanzi[data[1]];
-  //     }
-  //     if(data[0]==="3"){
-  //       if(data[1]==="0"){
-  //         return"三十";
-  //       }else{
-  //         return "三十"+hanzi[data[1]];
-  //       }
-  //     }
-  //   }
-  //   return year+"年"+m_d(array[1])+"月"+m_d(array[2])+"日";
-  // }
-  //   var str = getChsDate('1996-04-25');
-  //   console.log(str);  // 二零一五年一月八日
-
-    // 代码三：
-
-
-    // function getLastNDays(data){
-    //   var time = Date.now();
-    //   var number = (time-data*24*60*60*1000);
-    //   var year = Math.floor(number/1000/60/60/24/365)+1970;
-    //   var month = Math.floor((number-(year-1970)*1000*60*60*24*365)/1000/60/60/24/30);
-    //   var day = Math.floor((number-(year-1970)*1000*60*60*24*365-month*1000*60*60*24*30)/1000/60/60/24);
-    //   return year + "-" + month + "-" + day;
-    // }
+    代码一：
+    function getIntv(date){
+      var datetime= Date.parse(date)-Date.now()
+      var day=Math.floor(datetime/1000/60/60/24);
+      var hours= Math.floor((datetime-day*1000*60*60*24)/1000/60/60);
+      var minutes=Math.floor((datetime-day*1000*60*60*24-hours*1000*60*60)/1000/60);
+      var second=Math.floor((datetime-day*1000*60*60*24-hours*1000*60*60-minutes*1000*60)/1000);
+      return '距除夕还有' + day + '天' + hours + '小时' + minutes + '分' + second + '秒';
+    }
+    var str = getIntv("2017-01-27");
+    console.log(str);
     //
-    //
-    // function getLastNDays(data){
-    //   var time1 = Date.now()-data*24*60*60*1000;
-    //   var time2 = new Date(time1);
-    //   return time2.getFullYear() + '-' + (time2.getMonth()+1) + '-' + time2.getDate()
-    // }
-    // var lastWeek =  getLastNDays(7); // ‘2016-01-08’
-    // var lastMonth = getLastNDays(30); //'2015-12-15'
+
+    代码二：
+    function getChsDate(data){
+      var array=data.split('-');
+      var year='';
+      var hanzi=['零','一','二','三','四','五','六','七','八','九'];
+      for(var i=0; i<4; i++){
+        year+=hanzi[array[0][i]];
+      }
+    function m_d(data){
+      if (data.length===1){
+        data="0"+data;
+      }
+      if(data[0]==="0"){
+        return hanzi[data[1]];
+      }
+      if(data[0]==="1"){
+        return "十"+hanzi[data[1]];
+      }
+      if(data[0]==="2"){
+        return "二十"+hanzi[data[1]];
+      }
+      if(data[0]==="3"){
+        if(data[1]==="0"){
+          return"三十";
+        }else{
+          return "三十"+hanzi[data[1]];
+        }
+      }
+    }
+    return year+"年"+m_d(array[1])+"月"+m_d(array[2])+"日";
+  }
+    var str = getChsDate('1996-04-25');
+    console.log(str);  // 二零一五年一月八日
+
+    代码三：
 
 
-    // 代码四：
-    // var Runtime = (function(){
-    //     //code here ...
-    //     var obj = {
-    //         start: function(){
-    //           new Date()
-    //               //code here ...， 当前时间
-    //         },
-    //         end: function(){
-    //              //code here ...  结束时间
-    //         },
-    //         get: function(){
-    //              //code here ...  获取执行时间
-    //         }
-    //     };
-    // return obj;
-    // }());
-    // Runtime.start();
-    // //todo somethint
-    // Runtime.end();
-    // console.log(  Runtime.get() );
+    function getLastNDays(data){
+      var time = Date.now();
+      var number = (time-data*24*60*60*1000);
+      var year = Math.floor(number/1000/60/60/24/365)+1970;
+      var month = Math.floor((number-(year-1970)*1000*60*60*24*365)/1000/60/60/24/30);
+      var day = Math.floor((number-(year-1970)*1000*60*60*24*365-month*1000*60*60*24*30)/1000/60/60/24);
+      return year + "-" + month + "-" + day;
+    }
 
-    // function recursion(){
-    // for(var i=0; i<21; i++){
-    //   console.log(i);
-    // }
+
+    function getLastNDays(data){
+      var time1 = Date.now()-data*24*60*60*1000;
+      var time2 = new Date(time1);
+      return time2.getFullYear() + '-' + (time2.getMonth()+1) + '-' + time2.getDate()
+    }
+    var lastWeek =  getLastNDays(7); // ‘2016-01-08’
+    var lastMonth = getLastNDays(30); //'2015-12-15'
+
+
+    代码四：
+    var Runtime = (function(){
+        //code here ...
+        var obj = {
+            start: function(){
+              new Date()
+                  //code here ...， 当前时间
+            },
+            end: function(){
+                 //code here ...  结束时间
+            },
+            get: function(){
+                 //code here ...  获取执行时间
+            }
+        };
+    return obj;
+    }());
+    Runtime.start();
+    //todo somethint
+    Runtime.end();
+    console.log(  Runtime.get() );
+
+    function recursion(){
+    for(var i=0; i<21; i++){
+      console.log(i);
+    }
     for(var i=0; i<20; i++){
       console.log(i+1);
     }
-    // }
+    }
 
 
 
