--- a/学习/12.22/闭包test.html
+++ b/学习/12.22/闭包test.html
@@ -1,4 +1,4 @@
-<script>
+<!-- <script>
 // __scope__:{a:1; b:function}
   // var a = 1;
   // function b(){
@@ -108,4 +108,4 @@
 
 
 
-</script>
+</script> -->
