--- a/学习/2.13/面向对象实战/lazyLoad.html
+++ b/学习/2.13/面向对象实战/lazyLoad.html
@@ -4,21 +4,29 @@
     <meta charset="utf-8">
     <title>懒加载任务题</title>
     <style media="screen">
+      .ct{
+        width: 1200px;
+        margin: 0 auto;
+      }
       img{
         margin: 0;
         padding: 0;
       }
       .ct img{
-        display: inline-block;
         width:350px;
         height:350px;
         float: left;
         margin:10px;
       }
-      .ct img:after{
+      .ct:after{
         content:"";
         display: block;
         clear: both;
+      }
+      #word,#word2{
+        float: left;
+        border: 1px solid #ccc;
+        background: red;
       }
     </style>
   </head>
@@ -43,47 +51,97 @@
        <img src="http://a.hiphotos.baidu.com/zhidao/pic/item/0823dd54564e9258b95a842f9982d158cdbf4e80.jpg" data-src="http://imgsrc.baidu.com/forum/pic/item/ac6eddc451da81cb746d3a4d5266d016082431a2.jpg" alt="">
        <img src="http://a.hiphotos.baidu.com/zhidao/pic/item/0823dd54564e9258b95a842f9982d158cdbf4e80.jpg" data-src="http://i2.hdslb.com/video/38/385bab52d535eb7d692fb533f99256da.jpg" alt="">
        <img src="http://a.hiphotos.baidu.com/zhidao/pic/item/0823dd54564e9258b95a842f9982d158cdbf4e80.jpg" data-src="http://img4.duitang.com/uploads/item/201510/04/20151004085132_zG5iX.jpeg" alt="">
-
+       <p id="word">hello</p>
+       <p id="word2">world</p>
      </div>
-      <p id="word">hello</p>;
-      <p id="word2">world</p>
+
+
+
      <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
      <script type="text/javascript">
-
-       function Exposure($target,callback){
+        function Exposure($target,callback){
           this.$target = $target;
           this.callback = callback;
           this.bind();
           this.check();
-       };
-
-       Exposure.prototype.bind = function(){
-          var _this = this;
-          $(window).on('scroll',check);
-          _this.check();
-       };
-
-       Exposure.prototype.check = function(){
-          if(this.isShow(this.$target)){
-            this.callback();
-       };
-
-        Exposure.prototype.isShow = function($node){
-          var scrollTop = $(window).scrollTop(),
-              offsetTop = this.$target.offset().top,
-              nodeHeight = this.$target.height(),
-              windowHeight = $(window).height();
-          if(windowHeight + scrollTop > offsetTop && scrollTop < offsetTop + nodeHeight){
-            return true;
-          }else{
-            return false;
-          };
         };
 
-        new Exposure($('#word'),function(){
-          $('#word').text('hello' + $('#word').text() );
-        })
+        Exposure.prototype.bind = function(){
+           var _this = this;
+           $(window).on('scroll',function(){
+             _this.check();
+           })
+        };
 
+        Exposure.prototype.check = function(){
+           if(this.isShow(this.$target)){
+             this.callback(this.$target);
+          }
+        };
+
+         Exposure.prototype.isShow = function(){
+           var scrollTop = $(window).scrollTop(),
+               offsetTop = this.$target.offset().top,
+               nodeHeight = this.$target.height(),
+               windowHeight = $(window).height();
+           if(windowHeight + scrollTop > offsetTop && scrollTop < offsetTop + nodeHeight){
+             return true;
+           }else{
+             return false;
+           }
+         };
+
+
+        function showImg($img){
+          var url = $img.attr('data-src');
+          $img.attr('src',url);
+        }
+
+        var lazy = (function(){
+          var isOne = true;
+
+          return {
+            init: function($target,callback){
+              $target.each(function(index,target){
+                new Exposure($(target),callback);
+              })
+            },
+            isOne: function($target,callback){
+              if(isOne){
+                $target.each(function(index,target){
+                  new Exposure($(target),callback);
+                })
+              }
+              isOne = false;
+            },
+          }
+        })();
+
+
+
+        lazy.isOne($('.ct #word'),function($node){
+          $node.text( $node.text() + "123122" )
+        });
+
+        lazy.isOne($('.ct #word2'),function($node){
+          $node.text( $node.text() + "hello" )
+        });
+
+        lazy.init( $('.ct img') ,function($node){
+          showImg($node)
+        }) ;
+
+        // new Exposure($('#word'), function($node){
+        //     $node.text('hahahah');
+        // });
+        //
+        //
+        //
+        // $('.ct img').each(function(index,img){
+        //   new Exposure($(img),function($img){
+        //     showImg($img)
+        //   })
+        // })
         // new Exposure($('#word2'),function(){
         //   $('#word2').text('hello' + $('#word2').text() );
         //  })
@@ -94,24 +152,6 @@
         //    }
         //  })
       //  };
-
-      //  Exposure.prototype.showImg = function($imgs){
-      //    $imgs.each(function(){
-      //      var url = $(this).attr('data-src');
-      //      $(this).attr('src',url);
-      //      $(this).addClass('load');
-      //    })
-       //
-      //  };
-
-
-
-
-
-
-
-
-
 
 
       //   check();
