--- a/学习/2.20/js/index.html
+++ b/学习/2.20/js/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>test require.js</title>
-  </head>
-  <body>
-    <div class="box">
-      <p>HARRISKING</p>
-    </div>
-  </body>
-  <script src="">
-
-  </script>
-</html>
+    <!DOCTYPE html>
+    <html>
+      <head>
+        <meta charset="utf-8">
+        <title>test require.js</title>
+      </head>
+      <body>
+        <div class="box">
+          <p>HARRISKING</p>
+        </div>
+        <script src="./require.js" data-main="main"></script>
+      </body>
+    </html>
